[add] Python 3 compat.
[fix] context menu after playback
[fix] alternative player, do not append headers
[fix/upd] set title from metadata on play
[upd] Dutch strings [MB1968]
[upd] French strings [bubuleur]

5.5.0
[add] Saved Playlists
[add] allow developers to use their own api key
    - xbmcgui.Window(10000).setProperty('plugin.video.youtube-configs', json.dumps({"origin": ADDON_ID, "main": {"system": SYSTEM_NAME, "key": API_KEY[, "id": CLIENT_ID, "secret": CLIENT_SECRET]}}))
[add] Audio only: Settings -> General
[add] Age gate enforcement: Settings -> General
[add] Quick search and Quick search (Incognito)
    - Settings -> Folders
    - incognito doesn't add to search history or run post play events (add to watch history)
[add] Quick search to channels (no history)
[add] Live folder to channels
[fix] My Channel videos incl. private
[fix] mpeg-dash vods, proxy required
    - Settings - MPEG-DASH
    - Thanks to Schtek for generating the needed mpd file
[fix/upd] use select dialog for subtitle settings
    - [add] Configure subtitles: Settings -> General
    - [add] Current language with No auto-generated subtitles option
[upd] language/translation paths * Isengard (15.x)+ required
[upd] youtube_resolver: allow resolve by url
[fix/upd] do not use distutils.version.LooseVersion for version compare [stefansaraev]
[fix/upd] add check to api key stripping
[fix/upd] subtitles default to non asr track when possible
[fix/upd] login client logging and endpoints
[fix/upd] Watch Later
    - Clear: Settings - Folders - Custom Watch Later playlist id
    - Settings - Folders - Retrieve Watch Later playlist id
[fix/upd] History
    - cannot add to history from add-on
    - Clear: Settings - Folders - Custom History playlist id
[fix] /api/update route logging
[rem] SPMC mpeg-dash support
[upd] Hebrew strings [Eng2Heb]
[upd] Polish strings [Etharr]
[upd] Italian strings [DjDiabolik]
[upd] Hungarian strings [lacesz-sh]

5.4.5