@@ -195,6 +195,8 @@ def print_items(items):
 
 
 def make_dirs(path):
+    if not path.endswith('/'):
+        path += '/'
     if not xbmcvfs.exists(path):
         try:
             r = xbmcvfs.mkdirs(path)
